Apply patch by tqh: fix ACPI hang at boot (#4762) Global lock/unlock assembly code was broken, reworked based on what FreeBSD does. Thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33781 a95241bf-73f2-0310-859d-f6bbb57e9c96